bazarr-ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: bazarr
  annotations:
    linkerd.io/inject: enabled
