bazarr-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bazarr
  labels:
    app: bazarr
    part-of: bazarr
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: true
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
      part-of: bazarr
  template:
    metadata:
      labels:
        app: bazarr
        part-of: bazarr
    spec:
      containers:
      - name: bazarr
        image: ghcr.io/linuxserver/bazarr:latest
        ports:
        - name: bazarr
          containerPort: 6767
        volumeMounts:
        - name: bazarr
          mountPath: /config
        - name: series
          mountPath: /series
        - name: animes
          mountPath: /animes
        - name: movies
          mountPath: /movies
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 64Mi
        readinessProbe:
          tcpSocket:
            port: bazarr
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: bazarr
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: bazarr
        persistentVolumeClaim:
          claimName: bazarr
      - name: series
        persistentVolumeClaim:
          claimName: series
      - name: animes
        persistentVolumeClaim:
          claimName: animes
      - name: movies
        persistentVolumeClaim:
          claimName: movies
