bazarr-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  selector:
    app: bazarr
    part-of: bazarr
  type: ClusterIP
  ports:
    - port: 6767
      targetPort: bazarr
---
kind: Service
apiVersion: v1
metadata:
  name: ak-outpost-proxy01
spec:
  type: ExternalName
  externalName: ak-outpost-proxy01.authentik.svc.cluster.local
  ports:
  - port: 9000
    targetPort: 9000
